syntax = "proto3";

package executors.v1.plan.v1.activities.v1;

import "component/v1/component.proto";
import "executors/v1/plan/v1/component_input.proto";
import "executors/v1/plan/v1/metadata.proto";
import "executors/v1/plan/v1/org_metadata.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/executors/v1/plan/v1/activities/v1";

message CreateComponentPlan {
  .executors.v1.plan.v1.ComponentInputType type = 1;
  .executors.v1.plan.v1.Metadata metadata = 2;
  .executors.v1.plan.v1.OrgMetadata org_metadata = 3;
  component.v1.Component component = 4;
}
