syntax = "proto3";

package executors.v1.plan.v1;

import "component/v1/component.proto";
import "executors/v1/plan/v1/plan_ref.proto";
import "executors/v1/plan/v1/plan_type.proto";
import "executors/v1/plan/v1/sandbox.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/protos/workflows/generated/types/executors/v1/plan/v1";

// CreatePlanRequest is a child workflow request for the plan phase
message CreatePlanRequest {
  PlanType type = 1;

  oneof input {
    option (tagger.oneof_tags) = "faker:\"-\"";
    Component component = 100;
    .executors.v1.plan.v1.Sandbox sandbox = 101;
  }
}

message Component {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string deployment_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string install_id = 4 [(tagger.tags) = "faker:\"shortID\""];

  component.v1.Component component = 5;
}

// CreatePlanResponse is a child workflow response for the plan phase
message CreatePlanResponse {
  .executors.v1.plan.v1.PlanRef plan = 1;
}
